fix repo description small width

--- a/src/pages/User/reposcard.scss
+++ b/src/pages/User/reposcard.scss
@@ -33,7 +33,7 @@ $stripe-bg-color: rgb(231, 229, 229);
         min-height: 2px;
         display: flex;
         align-items: center;
-        justify-content: space-start;
+        justify-content: flex-start;
         
         
         
